data/derived/comb/progs/unify/prog7230.ml.out
Characters 63-74:
  let fixpoint (f,b) = wwhile (if (f b = b) then (b, false) else (f b, true),b);;
                                                                 ^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type bool -> bool * bool
